// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Pf4SelectWrapper /> should render correctly 1`] = `
<FormGroup
  fieldId="bazz"
  isValid={true}
>
  <Select
    FieldProvider={[Function]}
    formOptions={
      Object {
        "change": [MockFunction],
      }
    }
    id="bazz"
    input={
      Object {
        "name": "bazz",
        "onChange": [MockFunction],
        "value": "",
      }
    }
    isSearchable={false}
    isValid={true}
    multi={false}
    options={
      Array [
        Object {
          "label": "Foo",
          "value": "bar",
        },
      ]
    }
  />
</FormGroup>
`;

exports[`<Pf4SelectWrapper /> should render correctly in error state 1`] = `
<FormGroup
  fieldId="bazz"
  helperTextInvalid="Error"
  isValid={false}
>
  <Select
    FieldProvider={[Function]}
    formOptions={
      Object {
        "change": [MockFunction],
      }
    }
    id="bazz"
    input={
      Object {
        "name": "bazz",
        "onChange": [MockFunction],
        "value": "",
      }
    }
    isSearchable={false}
    isValid={false}
    multi={false}
    options={
      Array [
        Object {
          "label": "Foo",
          "value": "bar",
        },
      ]
    }
  />
</FormGroup>
`;

exports[`<Pf4SelectWrapper /> should render correctly with description 1`] = `
<FormGroup
  fieldId="bazz"
  isValid={true}
>
  <TextContent>
    <Text
      component="small"
    >
      description
    </Text>
  </TextContent>
  <Select
    FieldProvider={[Function]}
    formOptions={
      Object {
        "change": [MockFunction],
      }
    }
    id="bazz"
    input={
      Object {
        "name": "bazz",
        "onChange": [MockFunction],
        "value": "",
      }
    }
    isSearchable={false}
    isValid={true}
    multi={false}
    options={
      Array [
        Object {
          "label": "Foo",
          "value": "bar",
        },
      ]
    }
  />
</FormGroup>
`;
